@@ -30,10 +30,15 @@ class SDLJoystick : public BzfJoystick {
     void	getJoy(int& x, int& y);
     unsigned long getJoyButtons();
     void	getJoyDevices(std::vector<std::string> &list) const;
+    void	getJoyDeviceAxes(std::vector<std::string> &list) const;
+    void	setXAxis(const std::string axis);
+    void	setYAxis(const std::string axis);    
 
   private:
     SDL_Joystick		*joystickID;
     int			 joystickButtons;
+    int			 xAxis;
+    int			 yAxis;
 };
 
 #endif // BZF_SDLJOY_H
