@@ -25,6 +25,10 @@
 #include "ErrorHandler.h"
 #include "TextUtils.h"
 
+#ifdef _MSC_VER
+#pragma warning(4:4800)
+#endif
+
 WinJoystick::WinJoystick() : inited(false)
 {
 }
@@ -37,7 +41,7 @@ void	      WinJoystick::initJoystick(const char* joystickName)
 {
   inited = false;
 
-  if (!strcmp(joystickName, "off") || !strcmp(joystickName, "")) {
+  if (!strcasecmp(joystickName, "off") || !strcmp(joystickName, "")) {
     return;
   }
 
@@ -46,23 +50,72 @@ void	      WinJoystick::initJoystick(const char* joystickName)
     return;
   }
 
-  if (joystickName[10] == '1')
+  if (joystickName[9] == '1')
     JoystickID = JOYSTICKID1;
-  else if (joystickName[10] == '2')
+  else if (joystickName[9] == '2')
     JoystickID = JOYSTICKID2;
 
   JOYINFO joyInfo;
   JOYCAPS joyCaps;
-  if ((joyGetPos(JoystickID, &joyInfo) != JOYERR_NOERROR) ||
-      (joyGetDevCaps(JoystickID, &joyCaps, sizeof(joyCaps)) != JOYERR_NOERROR)) {
+  MMRESULT result1 = joyGetPos(JoystickID, &joyInfo);
+  MMRESULT result2 = joyGetDevCaps(JoystickID, &joyCaps, sizeof(joyCaps));
+  if ((result1 != JOYERR_NOERROR) || (result2 != JOYERR_NOERROR)) {
     printError("Unable to initialize joystick.  Perhaps it is not plugged in?");
     return;
   }
 
-  xMin = (float)joyCaps.wXmin;
-  xMax = (float)joyCaps.wXmax;
-  yMin = (float)joyCaps.wYmin;
-  yMax = (float)joyCaps.wYmax;
+  axes.clear();
+
+  AxisInfo x;
+  x.name = "X";
+  x.exists = true;
+  x.requestFlag = JOY_RETURNX;
+  x.min = (float)joyCaps.wXmin;
+  x.max = (float)joyCaps.wXmax;
+  axes.push_back(x);
+
+  AxisInfo y;
+  y.name = "Y";
+  y.exists = true;
+  y.requestFlag = JOY_RETURNY;
+  y.min = (float)joyCaps.wYmin;
+  y.max = (float)joyCaps.wYmax;
+  axes.push_back(y);
+
+  AxisInfo z;
+  z.name = "Z";
+  z.exists = (bool)(joyCaps.wCaps & JOYCAPS_HASZ);
+  z.requestFlag = JOY_RETURNZ;
+  z.min = (float)joyCaps.wZmin;
+  z.max = (float)joyCaps.wZmax;
+  axes.push_back(z);
+
+  AxisInfo r;
+  r.name = "R";
+  r.exists = (bool)(joyCaps.wCaps & JOYCAPS_HASR);
+  r.requestFlag = JOY_RETURNR;
+  r.min = (float)joyCaps.wRmin;
+  r.max = (float)joyCaps.wRmax;
+  axes.push_back(r);
+
+  AxisInfo u;
+  u.name = "U";
+  u.exists = (bool)(joyCaps.wCaps & JOYCAPS_HASU);
+  u.requestFlag = JOY_RETURNU;
+  u.min = (float)joyCaps.wUmin;
+  u.max = (float)joyCaps.wUmax;
+  axes.push_back(u);
+
+  AxisInfo v;
+  v.name = "V";
+  v.exists = (bool)(joyCaps.wCaps & JOYCAPS_HASV);
+  v.requestFlag = JOY_RETURNV;
+  v.min = (float)joyCaps.wVmin;
+  v.max = (float)joyCaps.wVmax;
+  axes.push_back(v);
+
+  xIndex = 0;
+  yIndex = 1;
 
   inited = true;
 }
@@ -79,18 +132,41 @@ void	      WinJoystick::getJoy(int& x, int& y)
 
   JOYINFOEX joyInfo;
   // we're only interested in position
-  joyInfo.dwFlags = JOY_RETURNX | JOY_RETURNY | JOY_USEDEADZONE;
+  joyInfo.dwFlags = axes[xIndex].requestFlag | axes[yIndex].requestFlag;
   joyInfo.dwSize = sizeof(joyInfo);
 
   // check for errors
-  if (joyGetPosEx(JoystickID, &joyInfo) != JOYERR_NOERROR) {
+  MMRESULT result = joyGetPosEx(JoystickID, &joyInfo);
+  if (result != JOYERR_NOERROR) {
     printError("Could not get extended info from joystick");
     return;
   }
 
+  // get the information we asked for out of the structure
+  DWORD xRet = 0;
+  DWORD yRet = 0;
+  switch (axes[xIndex].requestFlag) {
+    case JOY_RETURNX: xRet = joyInfo.dwXpos; break;
+    case JOY_RETURNY: xRet = joyInfo.dwYpos; break;
+    case JOY_RETURNZ: xRet = joyInfo.dwZpos; break;
+    case JOY_RETURNR: xRet = joyInfo.dwRpos; break;
+    case JOY_RETURNU: xRet = joyInfo.dwUpos; break;
+    case JOY_RETURNV: xRet = joyInfo.dwVpos; break;
+    default: printError("Failed to get Joystick X axis information"); break;
+  }
+  switch (axes[yIndex].requestFlag) {
+    case JOY_RETURNX: yRet = joyInfo.dwXpos; break;
+    case JOY_RETURNY: yRet = joyInfo.dwYpos; break;
+    case JOY_RETURNZ: yRet = joyInfo.dwZpos; break;
+    case JOY_RETURNR: yRet = joyInfo.dwRpos; break;
+    case JOY_RETURNU: yRet = joyInfo.dwUpos; break;
+    case JOY_RETURNV: yRet = joyInfo.dwVpos; break;
+    default: printError("Failed to get Joystick Y axis information"); break;
+  }
+
   // adjust X and Y to scale
-  x = (int)((joyInfo.dwXpos / xMax) * 2000 - 1000);
-  y = (int)((joyInfo.dwYpos / yMax) * 2000 - 1000);
+  x = (int)((xRet / axes[xIndex].max) * 2000 - 1000);
+  y = (int)((yRet / axes[yIndex].max) * 2000 - 1000);
 
   // ballistic
   x = (x * abs(x)) / 1000;
@@ -145,6 +221,49 @@ void	      WinJoystick::getJoyDevices(std::vector<std::string> &list) const
   }
 }
 
+void	      WinJoystick::getJoyDeviceAxes(std::vector<std::string> &list) const
+{
+  list.clear();
+  if (!inited)
+    return;
+  
+  for (unsigned int i = 0; i < axes.size(); ++i) {
+    if (axes[i].exists)
+      list.push_back(axes[i].name);
+  }
+}
+
+void	      WinJoystick::setXAxis(const std::string axis)
+{
+  if (!inited)
+    return;
+
+  for (unsigned int i = 0; i < axes.size(); ++i) {
+    if (axes[i].exists) {
+      if (axes[i].name == axis) {
+	xIndex = i;
+	break;
+      }
+    }
+  }
+
+}
+
+void	      WinJoystick::setYAxis(const std::string axis)
+{
+  if (!inited)
+    return;
+
+  for (unsigned int i = 0; i < axes.size(); ++i) {
+    if (axes[i].exists) {
+      if (axes[i].name == axis) {
+	yIndex = i;
+	break;
+      }
+    }
+  }
+
+}
 
 
 // Local Variables: ***
